# Janus-rs

./: .gitignore  Cargo.toml  README.md  build.rs
src/main/: test-mr-crash.sh  test-mr-early-exit.sh  test-mr-many.sh  test-mr-wc.sh  test-mr.sh
src/mapreduce/: coordinator.rs  mod.rs  rpc.rs  sequential.rs  util.rs  worker.rs
src/mapreduce/apps/: crash.rs  early_exit.rs  indexer.rs  jobcount.rs  mod.rs  mtiming.rs  nocrash.rs  rtiming.rs  wc.rs
src/mapreduce/proto/: mr.proto
